--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/js/toast.js": "/js/toast.js",
     "/js/dialog.js": "/js/dialog.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/ballbeat.css": "/css/ballbeat.css"
 }
